fixed errors in art project listings metadata

--- a/content/projects/atrophy.mdx
+++ b/content/projects/atrophy.mdx
@@ -33,9 +33,9 @@ link: "https://lilianzlettuce.github.io/ad417/"
     <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials", values: ["Arduino", "Processing", "Repurposed Hardware", "Sensors"] },
-          { label: "Dimensions", values: ["Artist", "Developer"] },
-          { label: "Category", values: ["VR Experience"] },
+          { label: "Medium", values: ["Virtual reality"] },
+          { label: "Materials", values: ["Code", "VR headset"] },
+          { label: "Dimensions", values: ["N/A (digital); variable installation"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
