--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -40,7 +40,7 @@ link: "https://youtu.be/WGYg-UNLEUU"
   <SplitSection className="my-2 mb-8 gap-2">
     <SectionColumn size={3}>
       ##### Becoming
-      Audiovisual Installation
+      2025
       <a href="https://youtu.be/ksYax6dD-38" target="_blank" rel="noopener noreferrer">
         [View Demo >>]
       </a>
@@ -49,8 +49,9 @@ link: "https://youtu.be/WGYg-UNLEUU"
     <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials", values: ["Arduino", "Processing", "Repurposed Hardware", "Sensors"] },
-          { label: "Year", values: ["2025"] },
+          { label: "Medium", values: ["Audiovisual installation"] },
+          { label: "Materials", values: ["Analog video mixing hardware", "sensors", "code"] },
+          { label: "Dimensions", values: ["Approx. 10 × 6 × 5\" (device); variable installation"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
