--- a/content/projects/ghostwriter.mdx
+++ b/content/projects/ghostwriter.mdx
@@ -45,8 +45,8 @@ link: ""
     <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials", values: ["Sears the Scholar electric typewriter", "Servo motors", "Arduino", "3D printed mechanical parts"] },
-          { label: "Category", values: ["Interactive Installation"] },
+          { label: "Medium", values: ["Interactive installation"] },
+          { label: "Materials", values: ["Sears the Scholar typewriter", "Servo motors", "3D printed parts"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
