--- a/content/projects/imitation-of-the-pulp.mdx
+++ b/content/projects/imitation-of-the-pulp.mdx
@@ -26,7 +26,7 @@ link: ""
     <SplitSection className="my-2 mb-8 gap-2">
         <SectionColumn size={3}>
             ##### Imitation of the Pulp
-            Multimedia Installation
+            2024
             <a href="https://www.youtube.com/watch?v=dJjGv2EeWIM" target="_blank" rel="noopener noreferrer">
                 [View Demo >>]
             </a>
@@ -35,8 +35,9 @@ link: ""
         <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
             <ProjectInfoRow
                 items={[
-                { label: "Materials", values: ["Arduino circuit boards", "Upcycled juice boxes", "Live plants", "Sensors"] },
-                { label: "Year", values: ["2024"] },
+                    { label: "Medium", values: ["Multimedia installation"] },
+                    { label: "Materials", values: ["Upcycled juice boxes", "plant cuttings", "sensors"] },
+                    { label: "Dimensions", values: ["Approx. 10 × 6 × 5\" (device); variable installation"] },
                 ]}
                 labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
                 valuesClassName="text-sm"
