--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -4,7 +4,7 @@ description: "Landing page for Scout, a YC-backed startup. Implemented site from
 image: "/projects/scout/hero_mac-air.webp"
 tags: ["Next.js", "TypeScript", "React", "Responsive Design", "UI/UX", "Landing Page", "Startup"]
 categories: ["dev", "design"]
-date: "2024-11-15"
+date: "2025-02"
 link: "https://www.scoutforschools.com/"
 ---
 
@@ -18,18 +18,6 @@ link: "https://www.scoutforschools.com/"
     height={1664}
     frame="mockup"
     className="w-5/5 my-10"
-  />
-</Section>
-
-<Section className="w-full h-[90vh] flex justify-center items-center">
-  <MDXMedia 
-    src="/projects/scout/hero_mac-air.webp" 
-    alt="Hero" 
-    preset="header"
-    width={2560}
-    height={1664}
-    frame="mockup"
-    className="w-4/5 my-10"
   />
 </Section>
 
