--- a/content/projects/sea-unearthed.mdx
+++ b/content/projects/sea-unearthed.mdx
@@ -33,9 +33,8 @@ link: "https://youtu.be/JFFB1OnIGCE"
     <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials/Tools", values: ["Prerecorded sounds", "Computer speakers", "Audacity"] },
-          { label: "Dimensions", values: ["Artist", "Developer"] },
-          { label: "Category", values: ["Sound Art"] },
+          { label: "Medium", values: ["Audio composition"] },
+          { label: "Duration", values: ["03:05"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
