--- a/content/projects/see-no-evil.mdx
+++ b/content/projects/see-no-evil.mdx
@@ -36,9 +36,9 @@ link: "https://youtu.be/ZVR_eYubK7o"
     <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials", values: ["Vinyl-printed stickers", "8th Wall", "Processing"] },
-          { label: "Dimensions", values: ["Artist", "Developer"] },
-          { label: "Category", values: ["AR Experience"] },
+          { label: "Medium", values: ["Augmented reality"] },
+          { label: "Materials", values: ["Adhesive vinyl prints", "3D models", "Code"] },
+          { label: "Dimensions", values: ["N/A (digital); variable installation"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
@@ -46,7 +46,7 @@ link: "https://youtu.be/ZVR_eYubK7o"
 
       <br/>
 
-      This augmented reality experience examines the subtle sinister side of technology as an object of worship. It blends reality with our minds’ perception through the use of scannable, code-drawn stickers that can be placed on everyday objects, personal devices, and city infrastructure. The digital artifacts that emerge offer a visual representation of a threat that is otherwise invisible, manifesting into reality both our unavoidable attachment to our devices and the ever-existing potential danger they pose to our privacy.
+      This augmented reality experience examines the subtle sinister side of technology as an object of worship. It blends reality with our minds’ perception through the use of scannable stickers that can be placed on everyday objects, personal devices, and city infrastructure. The digital artifacts that emerge offer a visual representation of a threat that is otherwise invisible, manifesting into reality both our unavoidable attachment to our devices and the ever-existing potential danger they pose to our privacy.
       
       <div>
         Exhibitions:
