--- a/content/projects/spill-ticket-customization.mdx
+++ b/content/projects/spill-ticket-customization.mdx
@@ -2,24 +2,26 @@
 title: "Spill Ticket Customization"
 description: "Ticket customization page for spill, a Purdue Hackers show."
 image: "/projects/spill/preview-1.png"
-tags: ["Next.js", "React", "Web Development"]
+tags: ["Web Development", "React"]
 categories: ["dev", "design"]
-date: "2022-12-01"
+date: "2025-11-01"
 link: "https://www.purduehackers.com/"
 ---
 
-<MDXMedia 
-  src="/projects/spill/preview-1.png" 
-  alt="Hero screenshot" 
-  preset="header"
-  width={2560}
-  height={1664}
-  frame="mockup"
-  className="w-4/5"
-/>
+<Section className="w-full h-[90vh] flex justify-center items-center">
+  <MDXMedia 
+    src="/projects/spill/preview-1.png" 
+    alt="Hero screenshot" 
+    preset="header"
+    width={2560}
+    height={1664}
+    frame="mockup"
+    className="w-4/5 my-10"
+  />
+</Section>
 
 <ProjectHeader
-  title=""
+  title="Spill Ticket Customization Site"
   description="Landing site for Purdue Hackers, showcasing mission, events, and community."
 >
   <ProjectInfo
@@ -46,99 +48,8 @@ link: "https://www.purduehackers.com/"
     <br/><br/><br/>
 
     #### Brief
-    When I first joined the Purdue Hackers organizing team in my freshman year, the club's website was in dire need of an upgrade. As part of the engineering team, I was tasked with building a dynamic experience that reflected our club's core vision and values.
-
-    - Current site is out of date, need an updated site to reflect new branding and represent our online presence
-    - Need a dedicated website to communicate what the club does and how interested individuals can get involved
-  </SectionColumn>
-  <SectionColumn size={2}>
-  </SectionColumn>
-</SplitSection>
-
-<SplitSection>
-  <SectionColumn size={4}>
-    ###### Implementation
-  </SectionColumn>
-  <SectionColumn size={12}>
-    #### Goals
-    - Create an engaging and informative landing page to introduce Purdue Hackers to the public
-    - Highlight the club's mission, past projects, and upcoming events
-    - Provide a clear and user-friendly process for joining the club
-
-    <br/><br/><br/>
-
-    #### Visuals
-    <MDXMedia
-      src="/projects/spill/preview-1.png" 
-      alt="Hero screenshot" 
-      preset="project-documentation"
-      width={2560}
-      height={1664}
-      frame="none"
-      className="w-4/5"
-    />
-
-    <MDXMedia 
-      src="/projects/purdue-hackers/invitation.webp" 
-      alt="Invitation" 
-      preset="project-documentation"
-      width={2560}
-      height={1664}
-      frame="mockup"
-      className="w-4/5 my-10"
-    />
-
-    <MDXMedia
-      src="/projects/purdue-hackers/hack-night_mac-air.webp" 
-      alt="Hack night" 
-      preset="project-documentation"
-      frame="rgb(68, 68, 68)"  
-      className="w-full my-10"
-      baseImageClassName="aspect-1/2 rounded-lg"
-    />
-
-    <br/><br/><br/>
-
-    #### Technical Implementation
-    Built with modern web technologies to ensure reliability and maintainability for a student-run organization.
-
-    <TechStack 
-      technologies={["Next.js", "TypeScript", "Tailwind CSS", "Sanity", "Prisma", "PostgreSQL", "NextAuth.js"]}
-      title="Technology Stack"
-    />
-
-    <br/><br/><br/>
-
-    #### Process
-    - Whiteboard/paper prototyping
-    - Lofi/Hifi prototypes with Figma
-    - Technical implementation and iterations
-
-    <MDXMedia
-      src="/projects/purdue-hackers/invitation.webp" 
-      alt="Invitation" 
-      preset="project-documentation"
-    />
-
-    <br/><br/><br/>
-
-    #### Pages
-    We went for a Neobrutalist Retro UI aesthetic (High contrast, draggable windows, fun/unique graphics and interactions)
-    - Hero 
-    - Welcome email message (interactive email component)
-    - Hack Night (previous events, secret windows, countdown)
-    - CTA (custom graphics)
-
-    <br/><br/><br/>
-
-    #### Impact
-    The landing page serves as a crucial touchpoint for the Purdue Hackers community, helping to grow membership and showcase the organization's impact on campus.
-
-    <br/><br/><br/>
-
-    #### Next steps
-    - Club is constantly growing and evolving, website should change in stride to reflect club's identity
-  </SectionColumn>
+    wro
+   </SectionColumn>
   <SectionColumn size={2}>
   </SectionColumn>
 </SplitSection>
