--- a/content/projects/symphony-128.mdx
+++ b/content/projects/symphony-128.mdx
@@ -36,8 +36,9 @@ link: "https://youtu.be/ZVR_eYubK7o"
     <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
       <ProjectInfoRow
         items={[
-          { label: "Materials", values: ["Self-collected data", "p5.js", "Python"] },
-          { label: "Category", values: ["Data Visualization"] },
+          { label: "Medium", values: ["Data visualization"] },
+          { label: "Materials", values: ["Self-collected data", "code"] },
+          { label: "Dimensions", values: ["N/A (digital)"] },
         ]}
         labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
         valuesClassName="text-sm"
