--- a/content/projects/to-assume-the-flesh.mdx
+++ b/content/projects/to-assume-the-flesh.mdx
@@ -18,13 +18,14 @@ link: ""
     <SplitSection className="my-2 mb-8 gap-2">
         <SectionColumn size={3}>
             ##### To Assume the Flesh
-            Single-channel Video, Color & Sound
+            2024
         
         </SectionColumn>
         <SectionColumn size={6} className="h-fit flex flex-col gap-2 text-sm">
             <ProjectInfoRow
                 items={[
-                { label: "Year", values: ["2024"] },
+                    { label: "Medium", values: ["Single-channel video, color & sound"] },
+                    { label: "Duration", values: ["01:30"] },
                 ]}
                 labelClassName="font-jetbrains-mono font-normal text-muted-foreground uppercase text-xs"
                 valuesClassName="text-sm"
